--- a/exercice6.html
+++ b/exercice6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="fr" dir="ltr">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>exercice6</title>
     </head>
 
