--- a/exercice6.html
+++ b/exercice6.html
@@ -41,15 +41,15 @@
                 <ol>
                     <li>
                         <label for="adresse">Adresse :</label>
-                        <textarea name="adresse" rows=4 cols=20></textarea>
+                        <textarea name="adresse" rows=4 cols=20 required></textarea>
                     </li>
                     <li>
                         <label for="code">Code postal :</label>
-                        <input type="text" id="code" name="code" placeholder="Code postal">
+                        <input type="text" id="code" name="code" placeholder="Code postal" required>
                     </li>
                     <li>
                         <label for="ville">Ville :</label>
-                        <input type="text" id="ville" name="ville" placeholder="Ville">
+                        <input type="text" id="ville" name="ville" placeholder="Ville" required>
                     </li>
                 </ol>
             </div>
@@ -76,8 +76,8 @@
 
 
                     <li>
-                        <label for="numero_carte">Numéro de carte :</label>
-                        <input id="numero_carte" name="numero_carte" type="number" placeholder="Numéro de carte"
+                        <label for="cardNumber">Numéro de carte :</label>
+                        <input id="cardNumber" name="cardNumber" type="number" placeholder="Numéro de carte"
                             required>
                     </li>
 
@@ -85,7 +85,7 @@
 
                     <li>
                         <label for="securite">Code de sécurité :</label>
-                        <input type="number" id="securite" name="securite" placeholder="Code de sécurité" required>
+                        <input type="text" id="securite" name="securite" placeholder="Code de sécurité" required>
                     </li>
 
 
