--- a/exercice6.html
+++ b/exercice6.html
@@ -77,7 +77,7 @@
 
                     <li>
                         <label for="cardNumber">Numéro de carte :</label>
-                        <input id="cardNumber" name="cardNumber" type="number" placeholder="Numéro de carte"
+                        <input id="cardNumber" name="cardNumber" type="text" placeholder="Numéro de carte"
                             required>
                     </li>
 
