--- a/exercice6.html
+++ b/exercice6.html
@@ -62,16 +62,16 @@
                 <ol>
                     <li>
                         <label for="carte">Type de carte bancaire :</label>
-                        <ul style="list-style-type: circle">
-                            <li>
+                        <ul style="list-style-type: none">
+                            <li style="list-style:none">
                                 <input id="visa" name="type_de_carte" type="radio">
                                 <label for="visa">VISA</label>
                             </li>
-                            <li>
+                            <li style="list-style:none">
                                 <input id="mastercard" name="type_de_carte" type="radio">
                                 <label for="visa">Mastercard</label>
                             </li>
-                        </ul>
+                       </ul>
                     </li>
 
 
